<resources>
    <string name="app_name">Studgenie</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_number">Enter Number</string>
    <string name="explore">Explore</string>
    <string name="a_6_digit_otp_will_be_send_for_verification">A 6 digit OTP will be send for verification</string>
    <string name="sign_up">Sign Up </string>
    <string name="todo">TODO</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="receive_otp">Did not receive OTP?</string>
    <string name="verify">Verify &amp; Proceed</string>
    <string name="otp_success">OTP send successfully</string>
    <string name="otp_resend">OTP resend to your mobile number</string>
    <string name="detail_text">Please Enter Your Details</string>
    <string name="enter_name">Enter Name</string>
    <string name='enter_email'>Enter Email</string>
    <string name='enter_password'>Enter Password</string>
    <string name='confirm'>Confirm Password</string>
    <string name='submit'>Submit</string>
    <string name='skip'>Skip</string>
</resources>