<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.onboarding.fragment.SignUp2Fragment">

    <ImageView
        android:id="@+id/studgenie_imageView"
        android:layout_width="103dp"
        android:layout_height="56dp"
        android:layout_marginTop="25dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/studgenie_logo"
        tools:ignore="ContentDescription"
        />

    <!--    android:maxLength="10"-->

    <!--    <Spinner-->
    <!--        android:id="@+id/spinner_countries"-->
    <!--        android:layout_width="110dp"-->
    <!--        android:layout_height="47dp"-->
    <!--        android:backgroundTint="@color/lightGrey"-->
    <!--        android:dropDownWidth="95dp"-->
    <!--        android:dropDownVerticalOffset="6dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="@+id/editTextPhone"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/editTextPhone"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/textView"-->
    <!--        app:layout_constraintTop_toTopOf="@+id/editTextPhone"-->
    <!--        tools:listitem="@layout/country_item" />-->


    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/sign_up"
        android:textColor="@color/orangePrimary"
        android:textSize="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studgenie_imageView" />

    <com.studgenie.app.ui.common.OtpEditText
        android:id="@+id/enter_otp"
        android:layout_width="307dp"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/orangePrimary"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/enter_number"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enter_otp_title"
        app:layout_constraintTop_toBottomOf="@+id/enter_otp_title" />

    <TextView
        android:id="@+id/did_not_receive_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/raleway"
        android:text="@string/receive_otp"
        android:textColor="@color/black"
        android:textSize="11dp"
        app:layout_constraintEnd_toStartOf="@+id/resend_otp_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enter_otp"
        app:layout_constraintTop_toBottomOf="@+id/enter_otp"
        />

<!--    android:background="@drawable/button_shadow"-->
    <Button
        android:id="@+id/verify_proceed"
        android:layout_width="141dp"
        android:layout_height="38dp"
        android:background="@color/toast_message"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/enter_otp"
        app:layout_constraintTop_toBottomOf="@+id/did_not_receive_otp"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:id="@+id/enter_otp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:fontFamily="@font/raleway"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/sign_up_title"
        app:layout_constraintTop_toBottomOf="@+id/sign_up_title" />

    <TextView
        android:id="@+id/resend_otp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:fontFamily="@font/raleway"
        android:text="Resend OTP"
        android:textColor="@color/orangePrimary"
        android:textSize="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/did_not_receive_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/did_not_receive_otp"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="center"/>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:fontFamily="@font/raleway"
        android:text="00:30"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/verify_proceed"
        app:layout_constraintEnd_toEndOf="@+id/verify_proceed"
        app:layout_constraintTop_toBottomOf="@+id/enter_otp"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/toast_message_during_signup"
        android:layout_width="233dp"
        android:layout_height="25dp"
        android:layout_marginTop="36dp"
        android:background="@color/resend_message"
        android:fontFamily="@font/raleway"
        android:text="OTP resend to your mobile number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="12dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studgenie_imageView"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>