<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.onboarding.fragment.SignUp2Fragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="105dp"
        android:layout_height="56dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/studgenie_logo">/</ImageView>

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/poppins_medium"
        android:text='@string/sign_up'
        android:textColor="@color/orangePrimary"
        android:textSize="36dp">/</TextView>


    <TextView
        android:id="@+id/textView_enter_otp"
        android:layout_width="44pt"
        android:layout_height="11pt"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="291dp"
        android:fontFamily="@font/raleway"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textSize="20dp">/</TextView>


    <com.studgenie.app.ui.common.OtpEditText
        android:id="@+id/enter_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_enter_otp"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/inputbox_new"
        android:inputType="phone"
        android:maxLength="6"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/light_shadow_grey"
        android:textIsSelectable="false"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50pt"
        android:layout_height="10pt"
        android:layout_below="@+id/enter_otp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/raleway"
        android:text="@string/receive_otp"
        android:textColor="@color/black"
        android:textSize="11dp">/</TextView>

    <TextView
        android:id="@+id/resend_otp_button"
        android:layout_width="40pt"
        android:layout_height="10pt"
        android:layout_below="@+id/enter_otp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/textView3"
        android:fontFamily="@font/raleway"
        android:text="Resend OTP"
        android:textColor="#D9391D"
        android:textSize="11dp">/</TextView>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_otp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/resend_otp_button"
        android:fontFamily="@font/raleway"
        android:text="00:30"
        android:textColor="@color/black"
        android:textSize="11dp" />

    <Button
        android:id="@+id/verify_proceed"
        android:layout_width="150dp"
        android:layout_height="18pt"
        android:layout_marginStart="225dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/button_shadow"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/textView_visibility"
        android:layout_width="82pt"
        android:layout_height="10pt"
        android:layout_marginStart="125dp"
        android:layout_marginTop="125dp"
        android:background="@color/toast_message"
        android:fontFamily="@font/raleway"
        android:text="Invalid or Incorrect OTP"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:visibility="invisible">/</TextView>

    <TextView
        android:id="@+id/textView_resend"
        android:layout_width="122pt"
        android:layout_height="10pt"
        android:layout_marginStart="65dp"
        android:layout_marginTop="125dp"
        android:background="@color/resend_message"
        android:fontFamily="@font/raleway"
        android:text="OTP resend to your mobile number"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16dp"
        android:visibility="invisible">/
    </TextView>

</RelativeLayout>