<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.onboarding.fragment.SignUp2Fragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="105dp"
        android:layout_height="56dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/studgenie_logo">/</ImageView>

    <TextView
        android:id="@+id/sign_up_title"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/poppins_medium"
        android:text='@string/sign_up'
        android:textColor="@color/orangePrimary"
        android:textSize="36dp">/</TextView>


    <TextView
        android:id="@+id/textView_enterotp"
        android:layout_width="44pt"
        android:layout_height="11pt"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="291dp"
        android:fontFamily="@font/raleway"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textSize="20dp">/</TextView>

<!--    <EditText-->
<!--        android:id="@+id/edit_text_otp1"-->
<!--        android:layout_width="46dp"-->
<!--        android:layout_height="43dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginStart="53dp"-->
<!--        android:layout_marginTop="340dp"-->
<!--        android:backgroundTint="@color/lightshadowgrey"-->
<!--        android:padding="6dp"-->
<!--        android:text="8"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="30sp" />-->

<!--    <EditText-->
<!--        android:id="@+id/edit_text_otp2"-->
<!--        android:layout_width="46dp"-->
<!--        android:layout_height="43dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginLeft="102dp"-->
<!--        android:layout_marginTop="340dp"-->
<!--        android:backgroundTint="@color/lightshadowgrey"-->
<!--        android:padding="6dp"-->
<!--        android:text="8"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="30sp" />-->

<!--    <EditText-->
<!--        android:id="@+id/edit_text_otp3"-->
<!--        android:layout_width="46dp"-->
<!--        android:layout_height="43dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginLeft="151dp"-->
<!--        android:layout_marginTop="340dp"-->
<!--        android:backgroundTint="@color/lightshadowgrey"-->
<!--        android:padding="6dp"-->
<!--        android:text="8"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="30sp" />-->

<!--    <EditText-->
<!--        android:id="@+id/edit_text_otp4"-->
<!--        android:layout_width="46dp"-->
<!--        android:layout_height="43dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginLeft="200dp"-->
<!--        android:layout_marginTop="340dp"-->
<!--        android:backgroundTint="@color/lightshadowgrey"-->
<!--        android:padding="6dp"-->
<!--        android:text="8"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="30sp" />-->

<!--    <EditText-->
<!--        android:id="@+id/edit_text_otp5"-->
<!--        android:layout_width="46dp"-->
<!--        android:layout_height="43dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginLeft="249dp"-->
<!--        android:layout_marginTop="340dp"-->
<!--        android:backgroundTint="@color/lightshadowgrey"-->
<!--        android:padding="6dp"-->
<!--        android:text="8"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="30sp" />-->

<!--    <EditText-->
<!--        android:id="@+id/edit_text_otp6"-->
<!--        android:layout_width="46dp"-->
<!--        android:layout_height="43dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginLeft="298dp"-->
<!--        android:layout_marginTop="340dp"-->
<!--        android:backgroundTint="@color/lightshadowgrey"-->
<!--        android:padding="6dp"-->
<!--        android:text="8"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="30sp" />-->

    <com.studgenie.app.ui.common.OtpEditText
        android:id="@+id/enter_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/inputbox_new"
        android:textColor="@color/black"
        android:maxLength="6"
        android:textSize="20sp"
        android:textIsSelectable="false"
        android:padding="10dp"
        android:textColorHint="@color/lightshadowgrey"
        android:layout_marginBottom="10dp"
        android:inputType="phone"
        android:layout_below="@+id/textView_enterotp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50pt"
        android:layout_height="10pt"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/enter_otp"
        android:fontFamily="@font/raleway"
        android:text="@string/receive_otp"
        android:textSize="11dp"
        android:textColor="@color/black">/</TextView>

    <TextView
        android:id="@+id/resend_otp_button"
        android:layout_width="40pt"
        android:layout_height="10pt"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/enter_otp"
        android:fontFamily="@font/raleway"
        android:text="Resend OTP"
        android:textSize="11dp"
        android:layout_toRightOf="@+id/textView3"
        android:textColor="#D9391D">/</TextView>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_otp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/resend_otp_button"
        android:fontFamily="@font/raleway"
        android:text="00:30"
        android:textColor="@color/black"
        android:textSize="11dp" />

    <Button
        android:id="@+id/verify_proceed"
        android:layout_width="150dp"
        android:layout_height="18pt"
        android:layout_marginStart="195dp"
        android:layout_marginTop="460dp"
        android:background="@drawable/button_shadow"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14dp"
        />
</RelativeLayout>